fix(http): improve ServerRequest body parsing, security, and thread-safety
- Fix thread-safety in Header.java by cloning headers before setting values
- Update Header.value0f to return a new Header instance for custom headers
- Lazily read request body in ServerRequest to improve performance and avoid OOM
- Only read body if Content-Length > 0 or Transfer-Encoding is present
- Improve cookie parsing to handle empty values gracefully
- Update isSecure() to correctly detect HTTPS connections via HttpsExchange
- Upgrade ServerRequest body reading to use is.readAllBytes()
- Use .startsWith() instead of .contains() for content type checks